# OcctQML

./: .clang-format  .gitignore  CMakeLists.txt  DeployQt.cmake  OCCRenderer.cpp  OCCRenderer.h  OccQuickItem.cpp  OccQuickItem.h  OccSceneManager.cpp  OccSceneManager.h  OccViewerItem.cpp  OccViewerItem.h  OcctFrameBuffer.h  OcctGlTools.cpp  OcctGlTools.h  README.md  main.cpp  main.qml  main.qrc  main_qml.cpp  main_qml.qml
OccQWidget/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OcctFrameBuffer.h  OcctGlTools.cpp  OcctGlTools.h  OcctQtViewer.cpp  OcctQtViewer.h  main.cpp
